# glytos-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
glytos/: __init__.py  _client.py  _webhooks.py
tests/: test_client.py  test_webhooks.py
